# cmake_test

./: CMakeLists.txt  build.sh
demo/: CMakeLists.txt  demo.cpp
lib/: CMakeLists.txt  hello.cpp  hello.h  lib.h
toolchains/: mingw64.cmake
